Room, customer, booking end points added
